--- a/app/src/main/res/layout/play_screen.xml
+++ b/app/src/main/res/layout/play_screen.xml
@@ -19,6 +19,7 @@
     tools:context=".PlayScreen"
     android:orientation="vertical"
     android:background="@drawable/be5c0e4094052d751c7eafc5d1a06f07"
+    android:gravity="center"
     >
 
     <TextView
@@ -36,16 +37,15 @@
         android:layout_height="50dp"
         android:orientation="horizontal">
 
+
         <TextView
             android:id="@+id/textTakimAdi"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Takım Adı : "
+            android:text="@string/takımAdıText"
             android:textSize="16sp"
             android:layout_weight="1"
             android:gravity="center"
-
-
             />
 
     <ImageView
